bug/36302_new_event_popup_wrap_text / 2

--- a/src/styles/components/new_event.scss
+++ b/src/styles/components/new_event.scss
@@ -11,7 +11,7 @@
 .modal-confirm-new-event {
   display: block;
 
-  dd.sourceUrl {
+  dd {
     word-wrap: break-word;
   }
 }
